# Solana-Wallet-Connector

./: .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  turbo.json
examples/solana-connector/: package-lock.json  package.json  tsconfig.json
examples/solana-connector/src/: App.tsx  config.ts  index.tsx
examples/solana-connector/src/components/: AccountItem.tsx  AccountItems.tsx  Connection.tsx  CounterContract.tsx  Info.tsx  Providers.tsx
examples/solana-connector/src/contracts/: CounterContractAbi.d.ts
examples/solana-connector/src/contracts/factories/: CounterContractAbi__factory.ts
examples/solana-connector/src/hooks/: useGetCount.ts  useIncrement.ts  useTransfer.ts
examples/solana-connector/src/styles/: App.css  Button.css
signature-verification/: Cargo.toml  Forc.toml
signature-verification/verification-predicate/: Cargo.toml
signature-verification/verification-predicate/src/: main.sw
signature-verification/verification-predicate/tests/: harness.rs
signature-verification/verification-script/src/: main.sw
signature-verification/verification-script/tests/: harness.rs
