[workspace]
members = ["verification-script"]
resolver = "2"

[workspace.package]
authors = ["Fuel Labs <contact@fuel.sh>"]
version = "0.1.0"
edition = "2021"
homepage = "https://fuel.network"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/Solana-Wallet-Connector"

[workspace.dependencies]
fuels = { version = "0.55.0", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
solana-sdk = { version = "1.17.22" }

# curve25519-dalek 3.x pins zeroize to <1.4
# which conflicts with other dependencies requiring zeroize ^1.5.
# We’re patching the crate to unpin zeroize.
#
# For curve25519-dalek we’re using commit from a PR, see
# https://github.com/dalek-cryptography/curve25519-dalek/pull/606
# https://github.com/solana-labs/solana/issues/26688
[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "c14774464c4d38de553c6ef2f48a10982c1b4801"